--- a/app/component/global/global.css
+++ b/app/component/global/global.css
@@ -1,6 +1,10 @@
 /* santa helpers*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 * {
   box-sizing: border-box;
+}
+html {
+  scroll-behavior: smooth;
 }
 body {
   background-color: #FFFFFF;
@@ -8,4 +12,6 @@ body {
   display:contents;
   width: 1200px;
 }
+
+
 
