--- a/app/component/box/style/box.css
+++ b/app/component/box/style/box.css
@@ -1,4 +1,4 @@
-[data-general1] {
+[data-div1] {
   position: absolute;
   width: 1300px;
   height: 165px;
@@ -10,7 +10,7 @@
 
 [data-topanime] {
   position: absolute;
-  width: 143px;
+  width: 150px;
   height: 23px;
   left: 0px;
   top: -50px;
@@ -38,7 +38,7 @@
   position: absolute;
   width: 150px;
   height: 23px;
-  left: 220px;
+  left: 230px;
   top: 0px;
   /*style*/
   font-family: 'Roboto';
@@ -53,7 +53,7 @@
   position: absolute;
   width:170px;
   height: 70px;
-  left: 220px;
+  left: 230px;
   top: 30px;
   /*style*/
   font-family: 'Roboto';
@@ -68,7 +68,7 @@
   position: absolute;
   width: 200px;
   height: 165px;
-  left: 410px;
+  left: 430px;
   top: 0px;
   padding: 4px;
   border-radius: 21px;
@@ -78,7 +78,7 @@
   position: absolute;
   width: 125px;
   height: 23px;
-  left: 630px;
+  left: 660px;
   top: 0px;
   /*style*/
   font-family: 'Roboto';
@@ -91,9 +91,9 @@
 
 [data-lr2text] {
   position: absolute;
-  width: 150px;
+  width: 170px;
   height: 118px;
-  left: 630px;
+  left: 660px;
   top:30px;
   /*style*/
   font-family: 'Roboto';
@@ -109,7 +109,7 @@
   position: absolute;
   width: 200px;
   height: 165px;
-  left: 810px;
+  left: 860px;
   top: 0px;
   border-radius: 21px;
   padding: 4px;
@@ -119,7 +119,7 @@
   position: absolute;
   width: 117px;
   height: 23px;
-  left: 1030px;
+  left: 1090px;
   top: 0px;
   /*style*/
   font-family: 'Roboto';
@@ -132,9 +132,9 @@
 
 [data-lr3text] {
   position: absolute;
-  width: 160px;
+  width: 170px;
   height: 118px;
-  left: 1030px;
+  left: 1090px;
   top: 30px;
   /*style*/
   font-family: 'Roboto';
@@ -145,4 +145,21 @@
   color: #929292;
 }
 
-/*second div*/
+/*underline*/
+/*
+[data-underline] {
+  text-decoration: underline;
+  text-decoration-color:;
+  text-decoration-style: solid;
+  text-decoration-thickness: 0.5px;
+} */
+
+a:link, a:visited {
+  color: (internal value);
+  text-decoration: underline;
+  cursor:pointer;
+}
+
+a:link:active, a:visited:active {
+  color: (internal value);
+}
